...
    appMenu.addItem(prefsItem)
    appMenu.addItem(NSMenuItem.separator())

    appMenu.addItem(withTitle: "Quit Detours", action: #selector(NSApplication.terminate(_:)), keyEquivalent: "q")

    // File menu
    let fileMenu = NSMenu(title: "File")
    let fileMenuItem = NSMenuItem(title: "File", action: nil, keyEquivalent: "")
    fileMenuItem.submenu = fileMenu
    mainMenu.addItem(fileMenuItem)

    let newFolderItem = createDynamicMenuItem(
        title: "New Folder",
...
    newFileMenuItem.image = NSImage(systemSymbolName: "doc.badge.plus", accessibilityDescription: nil)
    fileMenu.addItem(newFileMenuItem)

    fileMenu.addItem(NSMenuItem.separator())

    let addRemoteHostItem = createDynamicMenuItem(
        title: "Add Remote Host...",
        action: #selector(AppDelegate.addRemoteHost(_:)),
        shortcutAction: .connectToServer,
        target: target
    )
    addRemoteHostItem.image = NSImage(systemSymbolName: "terminal", accessibilityDescription: nil)
    fileMenu.addItem(addRemoteHostItem)

    let connectToNetworkShareItem = NSMenuItem(
        title: "Connect to Network Share...",
        action: #selector(AppDelegate.connectToNetworkShare(_:)),
        keyEquivalent: ""
    )
    connectToNetworkShareItem.target = target
    connectToNetworkShareItem.image = NSImage(systemSymbolName: "network", accessibilityDescription: nil)
    fileMenu.addItem(connectToNetworkShareItem)
...
